--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "svench-mono-template",
-  "scripts": {
-    "dev": "rollup -cw"
-  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "cross-env": "^7.0.2",
     "lerna": "^3.22.1",
+    "nollup": "^0.13.11",
     "rollup": "^2.28.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-hot": "^0.1.0",
     "rollup-plugin-postcss-hot": "0.0.5",
     "rollup-plugin-svelte-hot": "^0.10.0",
     "svelte": "^3.29.0",
-    "svench": "0.0.9"
+    "svench": "^0.0.10-5"
+  },
+  "scripts": {
+    "svench:rollup": "cross-env SVENCH=1 rollup -cw",
+    "svench:nollup": "cross-env SVENCH=1 nollup",
+    "svench": "npm run --silent svench:nollup"
   }
 }
